--- a/pollux_interface/templates/signup.html
+++ b/pollux_interface/templates/signup.html
@@ -6,9 +6,9 @@
 <div class="col-md-4 col-md-offset-4">
     <div style="text-align:center">
         <img src="../static/images/tno.png" alt="tno-logo1"
-             style="height:70px"/>
-        <img src="../static/images/pollux_logo_V1_300dpi.png" alt="tno-logo1"
-             style="height:70px;"/></a>
+             style="height:50px"/>
+        <img src="../static/images/pollux.png" alt="pollux-logo1"
+             style="height:50px;"/></a>
         <br>
         <br>
         <br>
