--- a/pollux_interface/templates/password.html
+++ b/pollux_interface/templates/password.html
@@ -6,38 +6,35 @@
 <div class="col-md-6">
     <div style="text-align:center">
         <img src="../static/images/tno.png" alt="tno-logo1"
-             style="height:50px"/>
+             style="height:70px"/>
         <img src="../static/images/pollux.png" alt="pollux-logo1"
-             style="height:50px;"/></a>
+             style="height:70px;"/></a>
         <br>
+        <br>
+        <a href="/documentation" target="_blank">Documentation</a>
         <br>
     </div>
     <div class="login-panel panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Please Sign In</h3>
+            <h3 class="panel-title">Change Password</h3>
         </div>
         <div class="panel-body">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-            <div class="alert alert-info">
+            <div class="alert alert-danger">
                 {{ messages[0] }}
             </div>
             {% endif %}
             {% endwith %}
-            <form method="POST" action="/login">
+            <form method="POST" action="/password">
                 <fieldset>
                     <div class="form-group">
-                        <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                        <input class="form-control" placeholder="Old Password" name="old_password" type="password" value="">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                        <input class="form-control" placeholder="Old Password" name="new_password" type="password" value="">
                     </div>
-                    <div class="checkbox">
-                        <label>
-                            <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                        </label>
-                    </div>
-                    <button class="btn btn-lg btn-info btn-block">Login</button>
+                    <button class="btn btn-lg btn-success btn-block">Submit</button>
                 </fieldset>
             </form>
         </div>
