--- a/pollux_interface/templates/app_diagram.html
+++ b/pollux_interface/templates/app_diagram.html
@@ -26,9 +26,28 @@
     </div>
 </div>
 <div class="col-lg-12">
-    <input type="button" id="electrolyzer" value="Electrolyzer" onclick="addElectrolyzer();" class="btn btn-default btn-sm"
+    <input type="button" id="electrolyzer" value="Electrolyzer" onclick="addElectrolyzer();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="hydroden_demand" value="Hydrogen Demand" onclick="addHydrogenDemand();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="hydroden_storage" value="Hydrogen Storage" onclick="addHydrogenStorage();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="electricity_source" value="Electricity Source" onclick="addElectricitySource();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">    
+    <input type="button" id="electricity_demand" value="Electricity Demand" onclick="addElectricityDemand();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="electricity_storage" value="Electricity Battery" onclick="addElectricityStorage();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="heat_source" value="Heat Source" onclick="addHeatSource();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">    
+    <input type="button" id="heat_demand" value="Heat Demand" onclick="addHeatDemand();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="heat_storage" value="Heat Storage" onclick="addHeatStorage();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">
+    <input type="button" id="heat_pump" value="Heat Pump" onclick="addHeatPump();"
+        class="btn btn-default btn-sm" style="width:150px; height:100px">    
+    <input type="button" id="node" value="Node" onclick="addNode();" class="btn btn-default btn-sm"
         style="width:150px; height:100px">
-
 
 </div>
 
