User interface with example applications. The applications are not working Changed all Gemini parameters and references to Pollux

--- a/pollux_interface/templates/base.html
+++ b/pollux_interface/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TNO GEMINI</title>
+    <title>TNO POLLUX</title>
 
 
     <link href="{{ url_for('static', filename='vendor/font-awesome/font-awesome.min.css') }}" rel="stylesheet"
@@ -67,43 +67,37 @@
                         <a href="#"><i class="tim-icons icon-app"></i> Application</a>
                         <ul>
                             <li>
-                                <a href="/app/example_app"><i class="tim-icons icon-bullet-list-67"></i>Example Application</a>
+                                <a href="/app/timeseriesviewer"><i class="tim-icons icon-chart-bar-32"></i>Timeseries
+                                    Viewer</a>
                             </li>
-<!--                            <li>-->
-<!--                                <a href="/app/diagram"><i class="tim-icons icon-vector"></i>Diagram-->
-<!--                                    Builder</a>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <a href="/app/timeseriesviewer"><i class="tim-icons icon-chart-bar-32"></i>Timeseries-->
-<!--                                    Viewer</a>-->
-<!--                            </li>-->
-                            <!-- <li>
-                                <a href="/app/esp"><i class="tim-icons icon-sound-wave"></i>ESP Monitoring</a>
-                            </li> -->
                             <li>
-                                <a href="/app/example_app_route"><i
-                                        class="tim-icons icon-sound-wave"></i>Example App</a>
+                                <a href="/app/app_electrolyser"><i class="tim-icons icon-bullet-list-67"></i>Electrolyser</a>
+                            </li>
+                            <li>
+                                <a href="/app/app_heatpump"><i class="tim-icons icon-bullet-list-67"></i>Heat pump</a>
                             </li>
 <!--                            <li>-->
-<!--                                <a href="/app/injectionwellmonitoring"><i-->
-<!--                                        class="tim-icons icon-sound-wave"></i>Injection Well Monitoring</a>-->
+<!--                                <a href="/app/example_app_route"><i-->
+<!--                                        class="tim-icons icon-sound-wave"></i>Example App</a>-->
 <!--                            </li>-->
+
 <!--                            <li>-->
 <!--                                <a href="/app/tagbrowser"><i class="tim-icons icon-tag"></i>Tag Browser</a>-->
 <!--                            </li>-->
+
 <!--                            <li>-->
 <!--                                <a href="/app/parameters_overview"><i class="tim-icons icon-bullet-list-67"></i>Parameters overview</a>-->
 <!--                            </li>-->
                         </ul>
                     </li>
-<!--                    <li>-->
-<!--                        <a href="#"><i class="tim-icons icon-settings-gear-63"></i> Settings</a>-->
-<!--                        <ul>-->
-<!--                            <li>-->
-<!--                                <a href="/setting/plant"><i class="fa fa-database"></i>Plant Configuration</a>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
+                    <li>
+                        <a href="#"><i class="tim-icons icon-settings-gear-63"></i> Settings</a>
+                        <ul>
+                            <li>
+                                <a href="/setting/plant"><i class="fa fa-database"></i>Plant Configuration</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="#"><i class="tim-icons icon-paper"></i> Info</a>
                         <ul>
@@ -124,7 +118,7 @@
             <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand"><img src="../static/images/tno.png" alt="tno-logo1"
-                            style="height:45px" /><img src="../static/images/pollux_logo_V1_300dpi.png"
+                            style="height:45px" /><img src="../static/images/pollux_logo_white_background.png"
                             alt="tno-logo1" style="height:45px" /></a>
                     <ul class="navbar-nav ml-xl">
                         <li class="dropdown nav-item">
