--- a/pollux_interface/templates/base_login.html
+++ b/pollux_interface/templates/base_login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TNO GEMINI</title>
+    <title>TNO POLLUX</title>
 
     <link
         href="{{ url_for('static', filename='assets/fonts/fonts.googleapis.com_css_family=Poppins_200,300,400,600,700,800.css')}}"
