--- a/pollux_interface/templates/index.html
+++ b/pollux_interface/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}
 
 <div class="col-lg-12">
-    <h1 class="card-title">Welcome to GEMINI</h1>
+    <h1 class="card-title">Welcome to POLLUX</h1>
 </div>
 
 {% endblock %}
