WIP: created the scenario analysis application

--- a/pollux_interface/templates/base.html
+++ b/pollux_interface/templates/base.html
@@ -67,6 +67,13 @@
                         <a href="#"><i class="tim-icons icon-app"></i> Application</a>
                         <ul>
                             <li>
+                                <a href="/app/diagram"><i class="tim-icons icon-vector"></i>Diagram
+                                    Builder</a>
+                            </li>
+                            <li>
+                                <a href="/app/scenarioanalysis"><i class="tim-icons icon-vector"></i>Scenario Analysis</a>
+                            </li>
+                            <li>
                                 <a href="/app/timeseriesviewer"><i class="tim-icons icon-chart-bar-32"></i>Timeseries
                                     Viewer</a>
                             </li>
