User interface works with Power to Hydrogen demo. Needs to be coupled with new models

--- a/pollux_interface/templates/admin/index.html
+++ b/pollux_interface/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 
 {% block body %}
-<h1> Welcome to GEMINI admin panel</h1>
+<h1> Welcome to Pollux admin panel</h1>
 
 <div>
     In this panel you can assign project to user with one-to-many relationship using <b>Group</b>. You also can assign a user's <b>role</b> as admin. Admin can do several things: create new user, delete project, assign project, etc. (see: documentation)
