--- a/pollux_interface/templates/index.html
+++ b/pollux_interface/templates/index.html
@@ -3,17 +3,30 @@
 {% block title %}
 
 <div class="col-lg-12">
-    <h1 class="card-title">Welcome to POLLUX</h1>
+    <h1 class="card-title">Welcome to Pollux</h1>
 </div>
+
+
 
 {% endblock %}
 
 {% block content %}
 
+<div class="col-lg-12">
+    <div class="card">
+        <div class="card-body">
+            <iframe id="iFrame_dashboard" src="" frameborder="0" allowfullscreen
+                style='width:100%; height:1000px; position: relative;' scrolling="yes"></iframe>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
 
 {% block script %}
+
+<script src="{{ url_for('static', filename='page/dashboard/js/api.js') }}"></script>
 
 
 {% endblock %}
