--- a/pollux_interface/templates/timeseries.html
+++ b/pollux_interface/templates/timeseries.html
@@ -23,7 +23,14 @@
 
 <script>
     function loadURL(){
-        custom_url = window.location.protocol + "//" + window.location.hostname + ":3000"
+
+        if (window.location.protocol=="http:"){
+            port = ":3000"
+        }else{
+            port = ":3001"
+        }
+
+        custom_url = window.location.protocol + "//" + window.location.hostname + port
 
         document.getElementById('iFrame_dashboard').src = custom_url
     }
