--- a/pollux_interface/templates/app_scenario_analysis_p2h2case.html
+++ b/pollux_interface/templates/app_scenario_analysis_p2h2case.html
@@ -9,9 +9,9 @@
         <div class="col-4">
         <div class="card full-width-panel">
             <!--Electrolyser parameters table-->
-            <h4 class="card-header">
+            <h3 class="card-header">
             Electrolyser parameters
-            </h4>
+            </h3>
             <div class="card-body">
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -105,9 +105,9 @@
             </div>
             </div>
             <!-- Hydrogen storage parameters table-->
-            <h4 class="card-header">
-            Hydrogen storage PARAMETERS
-            </h4>
+            <h3 class="card-header">
+            Hydrogen storage parameters
+            </h3>
             <div class="card-body">
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -151,9 +151,9 @@
         <!--            ====================================================================================-->
         <div class="col-8">
         <div class="card full-width-panel">
-            <h4 class="card-header">
+            <h3 class="card-header">
             Input profiles
-            </h4>
+            </h3>
             <div class="card-body">
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -164,7 +164,7 @@
                         Parameter
                         </th>
                         <th>
-                        Value
+                        Profile
                         </th>
                     </tr>
                     </thead>
@@ -172,7 +172,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="power_supply_profile_label">
-                            Power supply profile
+                            Power supply (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -197,7 +197,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="power_demand_profile_label">
-                            Power demand profile
+                            Power demand (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -222,7 +222,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="hydrogen_demand_profile_label">
-                            Hydrogen demand profile
+                            Hydrogen demand (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -250,18 +250,19 @@
             </div>
             </div>
         </div>
-        <!--                <div class="d-flex justify-content-center mb-3">-->
-        <!--                    <button type="button" class="btn btn-primary btn-sm" id="toggleButton" onclick="togglePanels()">Toggle Panels</button>-->
-        <!--                </div>-->
-        <div class="card full-width-panel" id="control_parameters_panel">
+        <div class="d-flex justify-content-center mb-3">
+            <button type="button" class="btn btn-primary btn-sm" id="toggleButton" onclick="togglePanels()">Switch modes</button>
+        </div>
+<!--    ============================= Simulation mode panel ============================= -->
+        <div class="card full-width-panel" id="simulation_parameters_panel" style="display: block;">
 
-            <h4 class="card-header">
-            Control parameters
-            </h4>
+            <h3 class="card-header">
+            Simulation mode
+            </h3>
             <div class="card-body">
             <div class="panel panel-default">
                 <div class="panel-body">
-                <table class="table table-bordered" id="control_parameters">
+                <table class="table table-bordered" id="control_profiles">
                     <thead>
                     <tr>
                         <th>
@@ -276,7 +277,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="power_splitter_profile_label">
-                            Power splitter control profile
+                            Power splitter control profile (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -301,7 +302,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="hydrogen_splitter_profile_label">
-                            Hydrogen splitter control profile
+                            Hydrogen splitter control profile (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -326,7 +327,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="gas_storage_profile_label">
-                            Gas storage control profile
+                            Gas storage control profile (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -352,7 +353,97 @@
                 </table>
                 </div>
             </div>
+        </div>
+
+        </div>
+
+
+        <!--    ============================= Optimization mode panel ============================= -->
+        <div class="card full-width-panel" id="optimization_parameters_panel" style="display: none;">
+
+            <h3 class="card-header">
+                Optimization mode
+            </h3>
+            <div class="card-body">
+                <div style="display: inline-flex; align-items: center;">
+                    <label class="mr-2" for="optimization_method" style="margin-right: 10px;">
+                        Optimization method:
+                    </label>
+                    <select class="form-control" id="optimization_method" style="background-color: white; color: black; width: auto; min-width: 170px;">
+                        <option value="trust-constr">trust-constr</option>
+                        <option value="L-BFGS-B">L-BFGS-B</option>
+                        <option value="Powell">Powell</option>
+                        <option value="differential-evolution">differential-evolution</option>
+                    </select>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <table class="table table-bordered" id="control_parameters">
+                            <thead>
+                                <tr>
+                                    <th>Parameter</th>
+                                    <th>Initial Value</th>
+                                    <th>Lower Bound</th>
+                                    <th>Upper Bound</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="form-control" id="power_splitter_parameters">
+                                            Power splitter (dimensionless with range: [0, 1])
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="power_splitter_initial_value" placeholder="Enter initial value" value="0.5">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="power_splitter_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="power_splitter_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="form-control" id="hydrogen_splitter_parameters">
+                                            Hydrogen splitter (dimensionless with range: [0, 1])
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="hydrogen_splitter_initial_value" placeholder="Enter initial value" value="0.5">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="hydrogen_splitter_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="hydrogen_splitter_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="form-control" id="gas_storage_parameters">
+                                            Gas storage (dimensionless with range: [0, 1])
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="gas_storage_initial_value" placeholder="Enter initial value" value="0.5">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="gas_storage_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                    </td>
+                                    <td>
+                                        <input type="number" class="form-control" id="gas_storage_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
+        </div>
+
+
 
         </div>
         </div>
