--- a/pollux_interface/templates/app_scenarioanalysis.html
+++ b/pollux_interface/templates/app_scenarioanalysis.html
@@ -1,24 +1,23 @@
 <html>
-    <body>
+<body>
         <p>
         {% extends "base.html" %}
 
     {% block title %}
-        <!--Main body-->
         </p>
         <div class="col-lg-12">
         <h1 class="page-header">
             Scenario Analysis App
         </h1>
-        </div> <!-- Closing the col-lg-12 -->
+        </div>
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="jumbotron" id="mybuilder">
-                    </div> <!-- Closing the jumbotron -->
-                </div> <!-- Closing panel-body -->
-            </div> <!-- Closing panel-default -->
-        </div> <!-- Closing col-lg-12 -->
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row my-3">
                 <div class="col">
@@ -26,22 +25,19 @@
                         <a class="dropdown-item" onclick="show_parameter_modal()">
                             Open Parameter
                         </a>
-                        <!--                    <a class="dropdown-item" onclick="delete_element()">-->
-                        <!--                    Delete-->
-                        <!--                    </a>-->
-                    </div> <!-- Closing dropdown-menu dropdown-menu-sm -->
-                </div> <!-- Closing col -->
-            </div> <!-- Closing row my-3 -->
+                    </div>
+                </div>
+            </div>
             <div class="modal right fade" id="componentModal" role="dialog">
                 <div id="component_parameters_popup">
                 </div>
             <!-- Placeholder for imported HTML -->
-            </div> <!-- Closing modal right fade -->
-        </div> <!-- Closing container -->
+            </div>
+        </div>
 
-        <!--            ====================================================================================-->
-        <!--                                    1st ROW, Case specific table                                    -->
-        <!--            ====================================================================================-->
+        <!--            ====================================================================================    -->
+        <!--                                 1st ROW, Case specific tables                                      -->
+        <!--            ====================================================================================    -->
         <div class="container-fluid">
             <div id="scenario_analysis_table"></div>
             <script>
@@ -57,9 +53,9 @@
                                                         }
                                         }
             </script>
-            <!--            ====================================================================================-->
-            <!--                                                 2nd ROW, General inputs                            -->
-            <!--            ====================================================================================-->
+            <!--    ====================================================================================    -->
+            <!--                                     2nd ROW, General inputs                                -->
+            <!--    ====================================================================================    -->
             <div class="row">
             <div class="col-6">
                 <div class="card full-width-panel">
@@ -77,37 +73,27 @@
                                     Time horizon [hours]:
                                 </label>
                                 <input data-min-length="1" id="time_horizon" placeholder="Type a time horizon in hours" type="text" value="24"/>
-                                <div class="form-group d-flex align-items-center">
-                                    <label class="mr-2" for="time_step">
-                                    Timestep [hours]:
+                                <div style="display: inline-flex; align-items: center;">
+                                    <label class="mr-2" for="time_step" style="margin-right: 10px;">
+                                        Timestep [hours]:
                                     </label>
-                                    <select class="form-control custom-select-width" id="time_step" style="background-color: white; color: black;">
-                                        <option value="1">
-                                            1 hour
-                                        </option>
-                                        <option value="2">
-                                            2 hours
-                                        </option>
-                                        <option value="3">
-                                            3 hours
-                                        </option>
-                                        <option value="4">
-                                            4 hours
-                                        </option>
-                                        <option value="6">
-                                            6 hours
-                                        </option>
-                                        <option value="12">
-                                            12 hours
-                                        </option>
-                                        </select>
+                                    <select class="form-control" id="time_step" style="background-color: white; color: black; width: auto; min-width: 100px;">
+                                        <option value="1">1 hour</option>
+                                        <option value="2">2 hours</option>
+                                        <option value="3">3 hours</option>
+                                        <option value="4">4 hours</option>
+                                        <option value="6">6 hours</option>
+                                        <option value="12">12 hours</option>
+                                    </select>
                                 </div>
-                                <input class="btn btn-primary btn-lg" id="run_solver_button" onclick="run_solver();" type="button" value="Run"/>
-                            </div> <!-- Closing panel panel-default -->
-                        </div> <!-- Closing panel panel-default -->
-                    </div> <!-- Closing card-body -->
-                </div> <!-- Closing card full-width-panel -->
-            </div> <!-- Closing col-6 -->
+                                <div>
+                                  <input class="btn btn-primary btn-lg" id="run_solver_button" onclick="run_solver();" type="button" value="Run"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-6">
                 <div class="card full-width-panel">
@@ -126,11 +112,10 @@
     <!--                        </datalist>-->
     <!--                        <br/>-->
     <!--                        <br/>-->
-    <!--                        <input class="btn btn-primary btn-sm" onclick="saveScenario();" type="button" value="Save"/>-->
-    <!--                        <input class="btn btn-primary btn-sm" onclick="loadScenario();" type="button" value="Load"/>-->
-    <!--                        <input class="btn btn-primary btn-sm" onclick="deleteScenario();" type="button" value="Delete"/>-->
+    <!--                        <input class="btn btn-primary btn-sm" onclick="save_scenario();" type="button" value="Save"/>-->
+    <!--                        <input class="btn btn-primary btn-sm" onclick="load_scenario();" type="button" value="Load"/>-->
+    <!--                        <input class="btn btn-primary btn-sm" onclick="delete_scenario();" type="button" value="Delete"/>-->
     <!--                    </div>-->
-
                             <div style="margin-bottom: 10px;">
                                 <label>Scenario Name:</label>
                                 <select class="form-Input" style="width: 200px; height: 30px;" id="scenarioname_list">
@@ -139,8 +124,8 @@
                             </div>
                             <div>
                                 <button id="button_addScenario" type="button" class="btn btn-primary btn-sm" onclick="openNewScenarioModal();">New</button>
-                                <button id="button_saveScenario" type="button" class="btn btn-primary btn-sm" onclick="saveScenario();">Save</button>
-                                <button id="button_deleteScenario" type="button" class="btn btn-primary btn-sm" onclick="deleteScenario();">Delete</button>
+                                <button id="button_saveScenario" type="button" class="btn btn-primary btn-sm" onclick="save_scenario();">Save</button>
+                                <button id="button_deleteScenario" type="button" class="btn btn-primary btn-sm" onclick="delete_scenario();">Delete</button>
                             </div>
 
                             <div class="modal fade" id="myProjectModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -192,9 +177,9 @@
                     </div>
                 </div>
             </div>
-            </div> <!-- Closing row -->
+        </div>
 
-        <!--    Load diagram component parameters html file-->
+        <!-- Load diagram component parameters html file-->
         <script>
         const apiEndpoint_1 = "{{ url_for('main.serve_template_file', filename='app_scenario_analysis_component_parameters.html') }}";
                     fetch(apiEndpoint_1)
@@ -213,10 +198,12 @@
                             });
         </script>
 
+        <!-- Url for power to hydrogen and power to heat pages that are loaded on the scenario analysis application-->
         <script>
             const urlP2H2Case = "{{ url_for('main.serve_template_file', filename='app_scenario_analysis_p2h2case.html') }}";
             const urlP2HeatCase = "{{ url_for('main.serve_template_file', filename='app_scenario_analysis_p2heatcase.html') }}";
         </script>
+
         <!-- Bootstrap JS and dependencies -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js">
         </script>
@@ -228,7 +215,7 @@
 
 
         {% block script %}
-            <style>
+        <style>
         .modal.right .modal-dialog { position: fixed; margin: auto; width: 500px; height: 100%;
                     -webkit-transform: translate3d(0%, 0, 0); -ms-transform: translate3d(0%, 0, 0); -o-transform: translate3d(0%, 0, 0);
                     transform: translate3d(0%, 0, 0); }
@@ -245,32 +232,20 @@
         </style>
         <!-- LINKS TO THE EXTERNAL JAVASCRIPT FILES -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jointjs/3.7.4/joint.css" rel="stylesheet" type="text/css"/>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.js">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.4.1/backbone.js">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jointjs/3.7.4/joint.js">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/diagram.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/component.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/api.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/scenario_management.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/parameterstable.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/profiles.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='vendor/dataTables/jquery.dataTables.min.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='vendor/dataTables/dataTables.bootstrap.min.js') }}">
-        </script>
-        <script src="{{ url_for('static', filename='vendor/dataTables/jquery.dataTables.min.js') }}">
-        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.4.1/backbone.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jointjs/3.7.4/joint.js"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/diagram.js') }}"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/component.js') }}"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/api.js') }}"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/scenario_management.js') }}"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/parameterstable.js') }}"></script>
+        <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/profiles.js') }}"></script>
+        <script src="{{ url_for('static', filename='vendor/dataTables/jquery.dataTables.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='vendor/dataTables/dataTables.bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='vendor/dataTables/jquery.dataTables.min.js') }}"></script>
         <link href="{{ url_for('static', filename='vendor/dataTables/dataTables.bootstrap.css') }}" rel="stylesheet"/>
         <link href="{{ url_for('static', filename='vendor/dataTables/dataTables.responsive.css') }}" rel="stylesheet"/>
         {% endblock %}
-    </body>
+</body>
 </html>
