Fixes in the app visualization Demo version shared internally for review

--- a/pollux_interface/templates/app_visualisation.html
+++ b/pollux_interface/templates/app_visualisation.html
@@ -33,25 +33,28 @@
             </h3>
             <div class="card-body">
                 <div class="panel panel-default">
-                    <div id="control_figure" style="width:100%; height:500px;"></div>
+                    <div id="objective_func_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="optimization_figure" style="width:100%; height:500px;"></div>
+                    <div id="scaled_control_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="power_figure" style="width:100%; height:500px;"></div>
+                    <div id="control_profiles_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="hydrogen_figure" style="width:100%; height:500px;"></div>
+                    <div id="power_profiles_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="mismatch_figure" style="width:100%; height:500px;"></div>
+                    <div id="hydrogen_profiles_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="kpi_figure" style="width:100%; height:500px;"></div>
+                    <div id="mismatch_plot" style="width:100%; height:500px;"></div>
                 </div>
                 <div class="panel panel-default">
-                    <div id="storage_figure" style="width:100%; height:500px;"></div>
+                    <div id="kpi_plot" style="width:100%; height:500px;"></div>
+                </div>
+                <div class="panel panel-default">
+                    <div id="hydrogen_storage_plot" style="width:100%; height:500px;"></div>
                 </div>
             </div>
         </div>
