--- a/pollux_interface/templates/login.html
+++ b/pollux_interface/templates/login.html
@@ -19,7 +19,7 @@
         <div class="panel-body">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-            <div class="alert alert-info">
+            <div class="alert alert-danger">
                 {{ messages[0] }}
             </div>
             {% endif %}
