--- a/pollux_interface/templates/signup.html
+++ b/pollux_interface/templates/signup.html
@@ -3,13 +3,12 @@
 {% block content %}
 <div class="col-md-2">
 </div>
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-6">
     <div style="text-align:center">
         <img src="../static/images/tno.png" alt="tno-logo1"
              style="height:50px"/>
         <img src="../static/images/pollux.png" alt="pollux-logo1"
              style="height:50px;"/></a>
-        <br>
         <br>
         <br>
     </div>
@@ -36,7 +35,7 @@
                     <div class="form-group">
                         <input class="form-control" type="password" name="password" placeholder="Password">
                     </div>
-                    <button class="btn btn-lg btn-success btn-block">Sign Up</button>
+                    <button class="btn btn-lg btn-secondary btn-block">Sign Up</button>
                 </fieldset>
             </form>
         </div>
