Bug fixes: -Changed the order of initializing the P2Hydrogen page, function initialize_page -Fixed control parameters saving

--- a/pollux_interface/templates/app_scenario_analysis_p2h2case.html
+++ b/pollux_interface/templates/app_scenario_analysis_p2h2case.html
@@ -1,7 +1,7 @@
 <!--<html>-->
 <!--<body>-->
 <!--            ====================================================================================-->
-<!--                                                 LEFT COLUMN                                    -->
+<!--                                            INPUT PARAMETERS                                    -->
 <!--            ====================================================================================-->
 <html>
 <body>
@@ -147,7 +147,7 @@
         </div>
         </div>
         <!--            ====================================================================================-->
-        <!--                                                 MIDDLE COLUMN                                    -->
+        <!--                                           SOLVER PARAMETERS                                    -->
         <!--            ====================================================================================-->
         <div class="col-8">
         <div class="card full-width-panel">
